# gwen-cli

./: .gitignore  QUICKSTART.md  README.md  console.txt  pyproject.toml
backend/: main.py
backend/agents/: aws.py  azure.py  cloudflare.py
frontend/: README.md  SETUP_CHECKLIST.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/logos/: README.md
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: AgentCard.tsx  AgentDetailView.tsx  AgentList.tsx  AgentLogs.tsx  DashboardView.tsx
frontend/src/types/: index.ts
src/: App.tsx  types.ts
src/commands/: api-handlers.ts
src/gwen_cli/: __init__.py  cli.py  server.py
src/gwen_cli/backend/agents/: atlassian.py  datadog.py  gcp.py  github.py
src/ui/: CommandPalette.tsx  DashboardTable.tsx  Header.tsx  Prompt.tsx
