[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwen-cli"
version = "1.0.0"
description = "Multi-Agent Cloud Status Monitor - Track Cloudflare, AWS, Azure, GCP, GitHub, Datadog, and Atlassian"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "GWEN Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.7.0",
    "python-multipart>=0.0.6",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/marcodepumper/gwen-cli"
Repository = "https://github.com/marcodepumper/gwen-cli"
Issues = "https://github.com/marcodepumper/gwen-cli/issues"

[project.scripts]
gwen = "gwen_cli.cli:main"
gwen-server = "gwen_cli.server:main"

[tool.setuptools.packages.find]
where = ["src"]
